- Fixed catalan spelling in Appearance | Customize | Colors (GitHub #206)
- XTEC Stats: Added first version which includes just a widget to count visits (Trello #821)
- BP-Docs: Hidden "Associated elements" in document edition (Trello #883)
- Reactor-primaria-1: Deleted unused files for theme colours (GitHub #214)
- Updated mailer library
- Added two colour palettes to theme (GitHub #216)



Changes 15.06.18
---------------------------------------------------------------------------------------
- Forbidden access to admin-tools and edit-comments for Collaborator user roles (Trello #790)
- Don't allow admins to modify WordPress URL on wp-admin/options-general.php (Trello #797)
- Role names translated in import-users-with-csv (Trello #625)
- Widget Grup-classe: Add navigation buttons to calendar (GitHub #182)
- Widget Grup-classe: Internationalization (GitHub #88)
- Upgraded GCE to version 2.2.5 (Trello #800)
- Added disk quota control (Trello #733)
- Removed plugin Social Articles (Trello #693)
- Improvements in bpdocs styles (Pull request #195)



Changes 15.05.19
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.0.5
- CSV: Included first version of the import-users-from-csv-with-meta plugin. #95
- If user is not logged in, redirects at login screen on BuddyPress tabs
- Solved categories error on breadcrumbs #2
- Disabled gravatar requests. #122
- PhpInfo for xtecadmins.
- Avoid upload large images (>2MB).
- Hide full size option post insertion (maximum size width 1024)
- Slideshow: Added proportional mode
- Added proxy support
- Giny Enllaços educatius: added 'ePergam', 'La meva XTEC' and bug fix #111
- Added constant SCHOOL_CODE
- Added shortcode to embed rss into post and page
- Added author link in metadata author post
- Added 'myposts' functions to replace Social Articles
- Added script to massive upgrade of WordPress (script_upgrade.class.php)